--- a/public/html/pages/problem-three.html
+++ b/public/html/pages/problem-three.html
@@ -35,8 +35,13 @@
     </section>
 
     <section class="output-section">
+      <section id="net-total-container">
+        <!-- Could make this more dynamic while trades are happening -->
+        <h4>Net Profit/Loss $<span id="net-total">0</span></h4>
+      </section>
       <div id="output-three">
         <!-- OUTPUT SECTION -->
+        {{> ../partials/cards }}
       </div>
     </section>
 
